--- a/dubbo-client/src/main/resources/application.properties
+++ b/dubbo-client/src/main/resources/application.properties
@@ -2,6 +2,12 @@
 server.port=8081
 
 ## Dubbo 服务消费者配置
-spring.dubbo.application.name=consumer
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
-spring.dubbo.scan=com.learn.dubbo.service
+spring.application.name=dubbo-consumer
+
+dubbo.application.name=dubbo-consumer
+dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.provider.timeout = 1000
+
+demo.service.version = 1.0.0
