--- a/dubbo-server/src/main/resources/application.properties
+++ b/dubbo-server/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 ## Dubbo 服务提供者配置
-spring.dubbo.application.name=provider
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-spring.dubbo.scan=com.learn.dubbo.service
+spring.application.name=dubbo-provider
+
+dubbo.application.name=dubbo-provider
+dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.provider.timeout = 1000
+
+demo.service.version = 1.0.0
